# Deep_Learning

hw01/: README.md  pyproject.toml
hw01/src/hw01/: __init__.py  config.py  config.toml  data.py  model.py  plotting.py  training.py
